--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=django,python
 
+secrets.json
 ### Django ###
 *.log
 *.pot
@@ -12,6 +13,7 @@ db.sqlite3
 db.sqlite3-journal
 media
 */__pycache__/*
+** / migrations / *
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
